--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,5 @@
-$accent: #D7B399;
-$dark: #212121;
-$light: #F9F6F1;
-$grey: #CBCFD4;
-$light-grey: #F4F4F4;
-$dark-grey: #8D8D8D;
-$important: #D84033;
+@import 'variables';
+
 
 body {
     box-sizing: border-box;
@@ -32,14 +27,20 @@ a {
 
 // header
 .header__inner {
-    padding: 50px 0;
+    padding: 50px 0 40px;
 }
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include breakpoint (lg) {
+        justify-content: space-around;
+    }
     &__list {
         display: flex;
+        @include breakpoint (lg) {
+            display: none;
+        }
     }
     &__item {
         margin-right: 35px;
@@ -57,10 +58,10 @@ a {
     background-image: url(../img/cart.svg);
     padding-left: 60px;
     height: 30px;
-    width: 30px;
     background-repeat: no-repeat;
     background-position: 0 center;
     cursor: pointer;
+    margin-bottom: 10px;
     &__count {
         display: block;
         position: relative;
@@ -80,6 +81,37 @@ a {
         border-right: 12px solid $accent;
     
     }
+    @include breakpoint (lg) {
+        order: 3;
+    }
+}
+.burger-btn {
+    display: none;
+    position: relative;
+    width: 30px;
+    height: 3px;
+    background-color: $dark;
+    border-radius: 3px;
+    cursor: pointer;
+    &::before, &::after {
+        position: absolute;
+        content: '';
+        display: block;
+        width: 30px;
+        height: 3px;
+        background-color: $dark;
+        border-radius: 3px;
+    }
+    &::before {
+        top: -6px;
+    }
+    &::after {
+        bottom: -6px;
+    }
+    @include breakpoint (lg) {
+        display: block;
+        order: -1;
+    }
 }
 // banner
 .banner {
@@ -87,28 +119,42 @@ a {
     &__inner {
         display: flex;
         align-items: flex-start;
-        padding: 130px 0;
+        padding: 120px 0 90px;
+        @include breakpoint (lg) {
+            flex-direction: column;
+            align-items: center;
+            padding: 60px 0 45px;
+        }
     }
     &__info {
         width: 50%;
+        @include breakpoint (lg) {
+            width: 100%;
+            text-align: center;
+            margin-bottom: 40px;
+        }
     }
     &__description {
         font-size: 30px;
         line-height: 37px;
-        margin-bottom: 35px;
+        margin-bottom: 20px;
     }
     &__title {
         font-size: 55px;
         line-height: 67px;
         font-weight: 700;
-        margin-bottom: 55px;
+        margin: 0 0 45px 0;
     }
     &__img {
         position: relative;
+        & img {
+            width: 100%;
+            max-width: 556px;
+        }
     }
     &__price {
         position: absolute;
-        right: 0;
+        right: 20px;
         text-align: right;
         &-old {
             display: inline-block;
@@ -152,7 +198,7 @@ a {
     background-color: $dark;
     &__inner {
         text-align: center;
-        padding: 80px 0 70px;
+        padding: 60px 0;
         color: #fff;
     }
     &__title {
@@ -176,10 +222,18 @@ a {
     &__inner {
         display: flex;
         justify-content: space-between;
-        padding-top: 60px;
+        padding: 30px 10px 0;
+        @include breakpoint (lg) {
+            flex-direction: column;
+        }
     }
     &__box {
         display: flex;
+        justify-content: space-between;
+        flex-basis: 50%;
+        @include breakpoint (lg) {
+            justify-content: center;
+        }
     }
     &__title {
         font-size: 24px;
@@ -194,15 +248,14 @@ a {
         font-size: 16px;
         line-height: 20px;
         font-weight: 300;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
     }
     &__btn {
-        padding: 10px 30px;
+        padding: 5px 30px;
         margin-bottom: 60px;
     }
     &__img {
         align-self: flex-end;
-        margin-left: 20px;
         margin-bottom: -3px;
     }
 }
@@ -211,7 +264,10 @@ a {
     &__inner {
         display: flex;
         flex-direction: column;
-        padding: 150px 0;
+        padding: 120px 0 150px;
+        @include breakpoint (lg) {
+            padding: 60px 0 75px;
+        }
     }
     &__title {
         align-self: center;
@@ -220,14 +276,24 @@ a {
         font-weight: 700;
         margin-bottom: 100px;
         text-transform: uppercase;
+        @include breakpoint (lg) {
+            margin-bottom: 50px;
+        }
     }
     &__cards {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin-bottom: 100px;
+        margin-bottom: 90px;
+        @include breakpoint (lg) {
+            justify-content: space-around;
+        }
     }
     &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex: 0 0 24%;
         padding: 25px;
         background-image:   url(../img/top-left.png),
                             url(../img/top-right.png),
@@ -235,6 +301,10 @@ a {
                             url(../img/bottom-left.png);
         background-repeat: no-repeat;
         background-position: top left, top right, bottom right, bottom left;
+        margin-bottom: 10px;
+        @include breakpoint (lg) {
+            flex: 0 0 30%;
+        }
     }
     &__info {
         text-align: center;
@@ -244,6 +314,7 @@ a {
         line-height: 17px;
         font-weight: 600;
         color: #000;
+        margin-bottom: 5px;
     }
     &__price {
         font-size: 18px;
@@ -273,19 +344,26 @@ a {
         display: flex;
         justify-content: space-between;
         padding: 75px 0 65px;
+        @include breakpoint (lg) {
+            padding: 35px 0 30px;
+            justify-content: space-around;
+        }
     }
     &__box {
         display: flex;
     }
     &__info {
-        margin-left: 70px;
+        margin-left: 80px;
+        @include breakpoint (lg) {
+            margin-left: 40px;
+        }
     }
     &__title {
         font-size: 10px;
         line-height: 12px;
         font-weight: 600;
         text-transform: uppercase;
-        margin-bottom: 20px;
+        margin: 10px 0 15px;
     }
     &__item {
         margin-bottom: 10px;
@@ -329,5 +407,8 @@ a {
         display: flex;
         justify-content: space-between;
         padding: 30px 0;
+        @include breakpoint (lg) {
+            justify-content: space-around;
+        }
     }
 }
