--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,9 @@ a {
 // header
 .header__inner {
     padding: 50px 0 40px;
+    @include breakpoint (md) {
+        padding: 25px 0 20px;
+    }
 }
 .nav {
     display: flex;
@@ -51,6 +54,12 @@ a {
         line-height: 17px;
         color: $dark;
     }
+    &__logo img {
+        @include breakpoint (xs) {
+            width: 75%;
+            margin-left: 30px;
+        }
+    }
 }
 .cart {
     display: flex;
@@ -60,8 +69,13 @@ a {
     height: 30px;
     background-repeat: no-repeat;
     background-position: 0 center;
+    background-size: contain;
     cursor: pointer;
     margin-bottom: 10px;
+    @include breakpoint (xs) {
+        height: 20px;
+        padding-left: 35px;
+    }
     &__count {
         display: block;
         position: relative;
@@ -101,6 +115,9 @@ a {
         height: 3px;
         background-color: $dark;
         border-radius: 3px;
+        @include breakpoint (xs) {
+            width: 28px;
+        }
     }
     &::before {
         top: -6px;
@@ -125,6 +142,9 @@ a {
             align-items: center;
             padding: 60px 0 45px;
         }
+        @include breakpoint (md) {
+            padding: 25px 0 20px;
+        }
     }
     &__info {
         width: 50%;
@@ -133,23 +153,42 @@ a {
             text-align: center;
             margin-bottom: 40px;
         }
+        @include breakpoint (sm) {
+            margin-bottom: 20px;
+        }
     }
     &__description {
         font-size: 30px;
-        line-height: 37px;
+        line-height: 1.2;
         margin-bottom: 20px;
+        @include breakpoint (sm) {
+            font-size: 20px;
+        }
     }
     &__title {
         font-size: 55px;
-        line-height: 67px;
+        line-height: 1.2;
         font-weight: 700;
         margin: 0 0 45px 0;
+        @include breakpoint (md) {
+            font-size: 45px;
+        }
+        @include breakpoint (sm) {
+            font-size: 45px;
+            margin: 0 0 25px 0;
+        }
+        @include breakpoint (xs) {
+            font-size: 25px;
+        }
     }
     &__img {
         position: relative;
         & img {
             width: 100%;
             max-width: 556px;
+            @include breakpoint (sm) {
+                width: 80%;
+            }
         }
     }
     &__price {
@@ -160,7 +199,7 @@ a {
             display: inline-block;
             position: relative;
             font-size: 24px;
-            line-height: 29px;
+            line-height: 1.2;
             font-weight: 700;
             margin-bottom: 15px;
             &::before {
@@ -171,13 +210,25 @@ a {
                 left: 0;
                 right: 0;
                 background-color: $dark;
+                @include breakpoint (sm) {
+                    top: 10px;
+                }
+            }
+            @include breakpoint (sm) {
+                font-size: 18px;
             }
         }
         &-new {
             font-size: 42px;
-            line-height: 51px;
+            line-height: 1.2;
             font-weight: 700;
             color: $important;
+            @include breakpoint (sm) {
+                font-size: 32px;
+            }
+            @include breakpoint (xs) {
+                font-size: 25px;
+            }
         }
     }
 }
@@ -192,6 +243,9 @@ a {
     &:hover {
         background-color: $important;
     }
+    @include breakpoint (xs) {
+        font-size: 12px;
+    }
 }
 // delivery
 .delivery {
@@ -200,20 +254,36 @@ a {
         text-align: center;
         padding: 60px 0;
         color: #fff;
+        @include breakpoint (md) {
+            padding: 30px 0;
+        }
+        @include breakpoint (sm) {
+            padding: 15px 0;
+        }
     }
     &__title {
         font-size: 30px;
-        line-height: 37px;
+        line-height: 1.2;
         font-weight: 400;
         margin-bottom: 23px;
         & span {
             font-weight: 700;
         }
+        @include breakpoint (sm) {
+            font-size: 24px;
+        }
+        @include breakpoint (xs) {
+            font-size: 16px;
+            margin: 0 0 10px;
+        }
     }
     &__text {
         font-size: 21px;
-        line-height: 26px;
+        line-height: 1.2;
         font-weight: 300; 
+        @include breakpoint (sm) {
+            font-size: 16px;
+        }
     }
 }
 // collections
@@ -226,6 +296,9 @@ a {
         @include breakpoint (lg) {
             flex-direction: column;
         }
+        @include breakpoint (md) {
+            padding: 0 10px;
+        }
     }
     &__box {
         display: flex;
@@ -233,6 +306,10 @@ a {
         flex-basis: 50%;
         @include breakpoint (lg) {
             justify-content: center;
+        }
+        @include breakpoint (xs) {
+            flex-direction: column;
+            text-align: center;
         }
     }
     &__title {
@@ -253,10 +330,17 @@ a {
     &__btn {
         padding: 5px 30px;
         margin-bottom: 60px;
+        @include breakpoint (xs) {
+            margin-bottom: 20px;
+        }
     }
     &__img {
         align-self: flex-end;
         margin-bottom: -3px;
+        @include breakpoint (xs) {
+            align-self: center;
+            width: 80%;
+        }
     }
 }
 // models
@@ -268,31 +352,45 @@ a {
         @include breakpoint (lg) {
             padding: 60px 0 75px;
         }
+        @include breakpoint (md) {
+            padding: 30px 0;
+        }
+        @include breakpoint (sm) {
+            padding-top: 0;
+        }
     }
     &__title {
         align-self: center;
         font-size: 36px;
-        line-height: 44px;
+        line-height: 1.2;
         font-weight: 700;
         margin-bottom: 100px;
         text-transform: uppercase;
         @include breakpoint (lg) {
             margin-bottom: 50px;
         }
+        @include breakpoint (sm) {
+            font-size: 26px;
+            margin-bottom: 30px;
+        }
     }
     &__cards {
         display: flex;
-        flex-wrap: wrap;
         justify-content: space-between;
         margin-bottom: 90px;
         @include breakpoint (lg) {
             justify-content: space-around;
+        }
+        @include breakpoint (md) {
+            flex-wrap: wrap;
+            margin-bottom: 40px;
         }
     }
     &__item {
         display: flex;
         flex-direction: column;
         align-items: center;
+        max-width: 225px;
         flex: 0 0 24%;
         padding: 25px;
         background-image:   url(../img/top-left.png),
@@ -348,14 +446,27 @@ a {
             padding: 35px 0 30px;
             justify-content: space-around;
         }
+        @include breakpoint (md) {
+            flex-direction: column;
+            align-items: center;
+        }
+        @include breakpoint (sm) {
+            padding: 15px 0;
+        }
     }
     &__box {
         display: flex;
+        @include breakpoint (sm) {
+            flex-wrap: wrap;
+        }
     }
     &__info {
         margin-left: 80px;
         @include breakpoint (lg) {
             margin-left: 40px;
+        }
+        @include breakpoint (sm) {
+            flex: 0 0 40%;
         }
     }
     &__title {
@@ -372,6 +483,12 @@ a {
         font-size: 14px;
         line-height: 22px;
         color: $grey;
+    }
+    &__logo {
+        @include breakpoint (sm) {
+            align-self: flex-start;
+            margin-left: 40px;
+        }
     }
 }
 .social {
@@ -402,13 +519,18 @@ a {
 // footer
 .footer {
     font-size: 14px;
-    line-height: 22px;
+    line-height: 1.2;
     &__inner {
         display: flex;
         justify-content: space-between;
         padding: 30px 0;
         @include breakpoint (lg) {
-            justify-content: space-around;
+            padding: 30px;
+        }
+        @include breakpoint (xs) {
+            flex-direction: column;
+            padding: 15px 30px;
+            font-size: 12px;
         }
     }
 }
